<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rootContainer"
            android:fitsSystemWindows="true">

            <TextView
                android:id="@+id/tvLogo"
                style="@style/Heading3_semiBold"
                android:layout_marginTop="90dp"
                android:text="@string/tv_logo"
                android:textAlignment="center"
                android:textSize="50sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_verify_text"
                style="@style/Heading3_semiBold"
                android:layout_marginTop="44dp"
                android:text="@string/enter_number"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLogo"/>

            <TextView
                android:id="@+id/tv_otp_receive_text"
                style="@style/Heading3_semiBold"
                android:layout_marginTop="14dp"
                android:text="@string/otp_text"
                android:textAlignment="center"
                android:textColor="#666666"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_verify_text"/>

            <TextView
                android:id="@+id/tv_phone_number"
                style="@style/Heading3_semiBold"
                android:layout_marginTop="92dp"
                android:text="@string/enter_number_hint"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="#666666"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_otp_receive_text"/>

            <LinearLayout
                android:id="@+id/linear_phone"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_phone_number">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                   >
                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/india"/>
                    <TextView
                        style="@style/simpletextViewStyle_wrapcontent"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:text="+91"/>
                    <EditText
                        android:id="@+id/et_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:maxLength="10"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_marginStart="-8dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"/>
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/sentOtp"
                style="@style/btn_main"
                android:layout_marginHorizontal="@dimen/_36sdp"
                android:layout_marginTop="@dimen/_46sdp"
                android:text="@string/get_otp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/linear_phone"
                app:layout_constraintStart_toStartOf="@+id/linear_phone"
                app:layout_constraintTop_toBottomOf="@+id/linear_phone" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
